# sj

./: Cargo.toml  README.md
sj/: Cargo.toml
sj/src/: main.rs
subjective/: Cargo.toml
subjective/src/: color.rs  lib.rs  school.rs  subjects.rs
subjective/src/school/: bells.rs  link.rs  mod.rs  notice.rs
subjective/src/school/bells/: ir.rs  mod.rs
subjective/tests/: Darren's Timetable and Subjects.subjective  Timetable and Subjects.subjective  find_bells.rs  load_subjective_file.rs
subjective/tests/test_helper/: mod.rs
