[package]
name = "sj"
version = "0.1.0"
edition = "2021"
description = "sj, the Subjective CLI"
license = "MIT"
repository = "https://github.com/SubjectiveLabs/sj"
readme = "../README.md"
keywords = ["subjective", "sj", "cli", "school", "education"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
subjective = { path = "../subjective" }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.51"
