[package]
name = "sj"
version = "0.1.0"
edition = "2021"
description = "sj, the Subjective CLI"
license = "MIT"
repository = "https://github.com/SubjectiveLabs/sj"
readme = "../README.md"
keywords = ["subjective", "sj", "cli", "school", "education"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
subjective = { path = "../subjective" }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.51"
reqwest = { version = "0.11.22", features = ["stream"] }
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
inquire = "0.6.2"
colored = "2.1.0"
async-stream = "0.3.5"
futures-util = "0.3.29"
indoc = "2.0.4"
humantime = "2.1.0"
log = "0.4.20"
env_logger = "0.11.0"
