[package]
name = "sj"
version = "0.1.0"
edition = "2024"
description = "sj, the Subjective CLI"
license = "MIT"
repository = "https://github.com/SubjectiveLabs/sj"
readme = "../README.md"
keywords = ["subjective", "sj", "cli", "school", "education"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
directories = "6.0.0"
subjective = { path = "../subjective", version = "*" }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
reqwest = { version = "0.12.24", features = ["stream"] }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
inquire = "0.9.1"
colored = "3.0.0"
async-stream = "0.3.6"
futures-util = "0.3.31"
indoc = "2.0.7"
humantime = "2.3.0"
log = "0.4.28"
env_logger = "0.11.8"
toml = "0.9.8"
shellexpand = "3.1.1"
