[package]
name = "subjective"
version = "0.1.1"
edition = "2021"
description = "Library for the Subjective CLI and other related tools."
license = "MIT"
repository = "https://github.com/SubjectiveLabs/sj"
readme = "../README.md"
keywords = ["subjective", "sj", "cli", "school", "education"]
categories = ["command-line-utilities"]

[dependencies]
uuid = { version = "1.6.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
strum = "0.25.0"
strum_macros = "0.25.3"
serde_json = "1.0.108"
thiserror = "1.0.51"
directories = "5.0.1"
colored = "2.1.0"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
diff-struct = { version = "0.5.3", optional = true }

[features]
diff = ["dep:diff-struct"]
