[package]
name = "subjective"
version = "0.1.2"
edition = "2024"
description = "Library for the Subjective CLI and other related tools."
license = "MIT"
repository = "https://github.com/SubjectiveLabs/sj"
readme = "../README.md"
keywords = ["subjective", "sj", "cli", "school", "education"]
categories = ["command-line-utilities"]

[dependencies]
uuid = { version = "1.18.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
serde_json = "1.0.145"
thiserror = "2.0.17"
directories = "6.0.0"
colored = "3.0.0"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
diff-struct = { version = "0.5.3", optional = true }

[features]
diff = ["dep:diff-struct"]
