[package]
name = "subjective"
version = "0.3.2"
edition = "2024"
description = "Library for the Subjective CLI and other related tools."
license = "MIT"
repository = "https://github.com/SubjectiveLabs/sj"
readme = "../README.md"
keywords = ["subjective", "sj", "cli", "school", "education"]
categories = ["command-line-utilities"]

[dependencies]
uuid = { version = "1.18.1", optional = true, features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", optional = true, features = ["serde_derive"] }
strum = { version = "0.27.2", default-features = false }
strum_macros = "0.27.2"
serde_json = { version = "1.0.145", optional = true }
thiserror = { version = "2.0.17", default-features = false }
colored = { version = "3.0.0", optional = true }
diff-struct = { version = "0.5.3", optional = true }
cfg-if = "1.0.4"

[features]
default = ["std"]
diff = ["dep:diff-struct"]
std = [
    "serde_json",
    "serde",
    "colored",
    "uuid",
    "chrono/std",
    "strum/std",
    "thiserror/std",
]
